attribut id for each affiliation

--- a/Affiliation.ipynb
+++ b/Affiliation.ipynb
@@ -145,24 +145,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = pd.read_csv('data/Universities-Affiliations/Moroccan-Affiliations.csv')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Affiliation</th>\n",
+       "      <th>Abbreviation</th>\n",
+       "      <th>University</th>\n",
+       "      <th>City</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Université Abdelmalek Essaadi</td>\n",
+       "      <td>UAE</td>\n",
+       "      <td>Université Abdelmalek Essaadi</td>\n",
+       "      <td>Tétouan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Faculté Oussoul Eddine</td>\n",
+       "      <td>FOE</td>\n",
+       "      <td>Université Abdelmalek Essaadi</td>\n",
+       "      <td>Tétouan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Faculté des Sciences Juridiques, Economiques e...</td>\n",
+       "      <td>FSJES</td>\n",
+       "      <td>Université Abdelmalek Essaadi</td>\n",
+       "      <td>Tanger</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Faculté des Sciences Juridiques, Economiques e...</td>\n",
+       "      <td>FSJES</td>\n",
+       "      <td>Université Abdelmalek Essaadi</td>\n",
+       "      <td>Tétouan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Faculté des Lettres et des Sciences Humaines</td>\n",
+       "      <td>FLSH</td>\n",
+       "      <td>Université Abdelmalek Essaadi</td>\n",
+       "      <td>Tétouan</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         Affiliation Abbreviation  \\\n",
+       "0                      Université Abdelmalek Essaadi          UAE   \n",
+       "1                            Faculté Oussoul Eddine          FOE    \n",
+       "2  Faculté des Sciences Juridiques, Economiques e...       FSJES    \n",
+       "3  Faculté des Sciences Juridiques, Economiques e...       FSJES    \n",
+       "4      Faculté des Lettres et des Sciences Humaines         FLSH    \n",
+       "\n",
+       "                      University     City  \n",
+       "0  Université Abdelmalek Essaadi  Tétouan  \n",
+       "1  Université Abdelmalek Essaadi  Tétouan  \n",
+       "2  Université Abdelmalek Essaadi   Tanger  \n",
+       "3  Université Abdelmalek Essaadi  Tétouan  \n",
+       "4  Université Abdelmalek Essaadi  Tétouan  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.insert(0, 'id', range(1, len(data) + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv(\"data/Universities-Affiliations/Moroccan-Affiliations.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
