--- a/data_transfomation.ipynb
+++ b/data_transfomation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,20 +72,21 @@
     "    new_df = pd.DataFrame(columns=[\"author_id\", \"author_name\", \"affiliation_full_name\", \"country\"])\n",
     "\n",
     "    for _, row in df.iterrows():\n",
-    "        # ids = extract_ids(df.loc[i, \"Authors with affiliations\"])\n",
-    "        # names = df.loc[i, \"Authors with affiliations\"].split(';')\n",
     "        authors_with_ids = row[\"Author full names\"].split(';')\n",
     "        authors_with_affiliations = row[\"Affiliations\"].split(';')\n",
     "        ids, author_names, affiliations, countries = [], [], [], []\n",
     "        \n",
-    "        for auth_id, aff in zip(authors_with_ids, authors_with_affiliations):\n",
+    "        for auth_id_name, aff in zip(authors_with_ids, authors_with_affiliations):\n",
     "            # extract author name\n",
-    "            author_name = auth_id.split('.')[0].strip()\n",
+    "            name_pattern = r\"[A-Za-záéíóúÁÉÍÓÚñÑ]+,\\s[A-Za-záéíóúÁÉÍÓÚñÑ]+\"\n",
+    "            name_match = re.search(name_pattern, auth_id_name)\n",
+    "            # author_name = auth_id.split('.')[0].strip()\n",
     "\n",
     "            # extract id\n",
-    "            match = re.search(r'\\((\\d+)\\)', auth_id)\n",
-    "            if match:\n",
-    "                extracted_id = match.group(1)\n",
+    "            id_match = re.search(r'\\((\\d+)\\)', auth_id_name)\n",
+    "            if id_match and name_match:\n",
+    "                author_id = id_match.group(1)\n",
+    "                author_name = name_match.group()\n",
     "            else:\n",
     "                continue\n",
     "\n",
@@ -94,7 +95,7 @@
     "            if country not in [\"morocco\", \"maroc\"]:\n",
     "                continue\n",
     "\n",
-    "            ids.append(extracted_id)\n",
+    "            ids.append(author_id)\n",
     "            author_names.append(author_name)\n",
     "            affiliations.append(aff)\n",
     "            countries.append(country)\n",
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -161,21 +162,21 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>12782205700</td>\n",
-       "      <td>Mjahed, Mostafa (12782205700)</td>\n",
+       "      <td>Mjahed, Mostafa</td>\n",
        "      <td>Ecole Royale de l'Air, Maths and Systems Dept....</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>56698346700</td>\n",
-       "      <td>De Miera Sáenz, L</td>\n",
+       "      <td>Sáenz, L</td>\n",
        "      <td>Departement de Biologie, Université Ibn Tofaï...</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>56615820600</td>\n",
-       "      <td>El Bahi, S</td>\n",
+       "      <td>Bahi, S</td>\n",
        "      <td>Mohammed v University, Faculty of Sciences, Ra...</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
@@ -189,35 +190,35 @@
        "    <tr>\n",
        "      <th>150</th>\n",
        "      <td>23978044400</td>\n",
-       "      <td>Elghazi, Haddou (23978044400)</td>\n",
+       "      <td>Elghazi, Haddou</td>\n",
        "      <td>Solid State Physics Laboratory, Faculty of Sci...</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>151</th>\n",
        "      <td>7006857659</td>\n",
-       "      <td>Jorio, Anouar (7006857659)</td>\n",
+       "      <td>Jorio, Anouar</td>\n",
        "      <td>Regional Center of Interface, Sidi Mohammed B...</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>152</th>\n",
        "      <td>12239828500</td>\n",
-       "      <td>Ouarsal, Rachid (12239828500)</td>\n",
+       "      <td>Ouarsal, Rachid</td>\n",
        "      <td>Laboratoire DIngénierie des Matériaux Organom...</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>153</th>\n",
        "      <td>8415913200</td>\n",
-       "      <td>El Bali, Brahim (8415913200)</td>\n",
+       "      <td>Bali, Brahim</td>\n",
        "      <td>Department of Chemistry, Faculty of Sciences,...</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>154</th>\n",
        "      <td>19638592600</td>\n",
-       "      <td>Amrani, Mahacine (19638592600)</td>\n",
+       "      <td>Amrani, Mahacine</td>\n",
        "      <td>Département de Génie Chimique, Faculté des Sci...</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
@@ -227,18 +228,18 @@
        "</div>"
       ],
       "text/plain": [
-       "       author_id                     author_name  \\\n",
-       "0    23004567900                     Khachane, M   \n",
-       "1     6701835701                      Villain, S   \n",
-       "2    12782205700   Mjahed, Mostafa (12782205700)   \n",
-       "3    56698346700               De Miera Sáenz, L   \n",
-       "4    56615820600                      El Bahi, S   \n",
-       "..           ...                             ...   \n",
-       "150  23978044400   Elghazi, Haddou (23978044400)   \n",
-       "151   7006857659      Jorio, Anouar (7006857659)   \n",
-       "152  12239828500   Ouarsal, Rachid (12239828500)   \n",
-       "153   8415913200    El Bali, Brahim (8415913200)   \n",
-       "154  19638592600  Amrani, Mahacine (19638592600)   \n",
+       "       author_id       author_name  \\\n",
+       "0    23004567900       Khachane, M   \n",
+       "1     6701835701        Villain, S   \n",
+       "2    12782205700   Mjahed, Mostafa   \n",
+       "3    56698346700          Sáenz, L   \n",
+       "4    56615820600           Bahi, S   \n",
+       "..           ...               ...   \n",
+       "150  23978044400   Elghazi, Haddou   \n",
+       "151   7006857659     Jorio, Anouar   \n",
+       "152  12239828500   Ouarsal, Rachid   \n",
+       "153   8415913200      Bali, Brahim   \n",
+       "154  19638592600  Amrani, Mahacine   \n",
        "\n",
        "                                 affiliation_full_name  country  \n",
        "0    Laboratoire de Chimie du Solide Minéral, dépar...  morocco  \n",
@@ -256,7 +257,7 @@
        "[155 rows x 4 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,15 +270,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "affiliations_df = pd.read_csv('data/Universities-Affiliations/Moroccan-Affiliations.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "french_cit_names = affiliations_df['City'].apply(lambda x: x.strip()).unique().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "english_city_names = [\n",
+    "    \"Tetouan\",\n",
+    "    \"Tangier\",\n",
+    "    \"Larache\",\n",
+    "    \"Ksar el-Kebir\",\n",
+    "    \"Al Hoceima\",\n",
+    "    \"Marrakesh\",\n",
+    "    \"El Kelaa of Sraghna\",\n",
+    "    \"Safi\",\n",
+    "    \"Essaouira\",\n",
+    "    \"El Jadida\",\n",
+    "    \"Sidi Bennour\",\n",
+    "    \"Settat\",\n",
+    "    \"Berrechid\",\n",
+    "    \"Casablanca\",\n",
+    "    \"Mohammedia\",\n",
+    "    \"Kenitra\",\n",
+    "    \"Agadir\",\n",
+    "    \"Ait Melloul\",\n",
+    "    \"Guelmim\",\n",
+    "    \"Ouarzazate\",\n",
+    "    \"Taroudant\",\n",
+    "    \"Smara\",\n",
+    "    \"Laayoune\",\n",
+    "    \"Dakhla\",\n",
+    "    \"Oujda\",\n",
+    "    \"Nador\",\n",
+    "    \"Berkane\",\n",
+    "    \"Rabat\",\n",
+    "    \"Sale\",\n",
+    "    \"Meknes\",\n",
+    "    \"Errachidia\",\n",
+    "    \"Fez\",\n",
+    "    \"Taza\",\n",
+    "    \"Beni Mellal\",\n",
+    "    \"Khouribga\",\n",
+    "    \"Khenifra\",\n",
+    "    \"Fquih Ben Salah\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Tétouan': 'Tetouan',\n",
+       " 'Tanger': 'Tangier',\n",
+       " 'Larache': 'Larache',\n",
+       " 'Kssar El Kébir': 'Ksar el-Kebir',\n",
+       " 'Al Hoceima': 'Al Hoceima',\n",
+       " 'Marrakech': 'Marrakesh',\n",
+       " 'EL Kelaâ des Sraghna': 'El Kelaa of Sraghna',\n",
+       " 'Safi': 'Safi',\n",
+       " 'Essaouira': 'Essaouira',\n",
+       " 'El Jadida': 'El Jadida',\n",
+       " 'Sidi Bennour': 'Sidi Bennour',\n",
+       " 'Settat': 'Settat',\n",
+       " 'Berrechid': 'Berrechid',\n",
+       " 'Casablanca': 'Casablanca',\n",
+       " 'Mohammedia': 'Mohammedia',\n",
+       " 'Kénitra': 'Kenitra',\n",
+       " 'Agadir': 'Agadir',\n",
+       " 'Ait Melloul': 'Ait Melloul',\n",
+       " 'Guelmim': 'Guelmim',\n",
+       " 'Ouarzazate': 'Ouarzazate',\n",
+       " 'Taroudant': 'Taroudant',\n",
+       " 'Es-Semara': 'Smara',\n",
+       " 'Laayoune': 'Laayoune',\n",
+       " 'Dakhla': 'Dakhla',\n",
+       " 'Oujda': 'Oujda',\n",
+       " 'Nador': 'Nador',\n",
+       " 'Berkane': 'Berkane',\n",
+       " 'Rabat': 'Rabat',\n",
+       " 'Salé': 'Sale',\n",
+       " 'Meknès': 'Meknes',\n",
+       " 'Errachidia': 'Errachidia',\n",
+       " 'Fès': 'Fez',\n",
+       " 'Taza': 'Taza',\n",
+       " 'Béni Mellal': 'Beni Mellal',\n",
+       " 'Khouribga': 'Khouribga',\n",
+       " 'Khénifra': 'Khenifra',\n",
+       " 'Fquih Ben Salah': 'Fquih Ben Salah'}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cities = {}\n",
+    "for city_fr, city_en in zip(french_cit_names, english_city_names):\n",
+    "    cities[city_fr] = city_en\n",
+    "cities\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Tetouan', 'Tanger', 'Larache', 'Kssar El Kebir', 'Al Hoceima', 'Marrakech', 'EL Kelaa des Sraghna', 'Safi', 'Essaouira', 'El Jadida', 'Sidi Bennour', 'Settat', 'Berrechid', 'Casablanca', 'Mohammedia', 'Kenitra', 'Agadir', 'Ait Melloul', 'Guelmim', 'Ouarzazate', 'Taroudant', 'Es-Semara', 'Laayoune', 'Dakhla', 'Oujda', 'Nador', 'Berkane', 'Rabat', 'Sale', 'Meknes', 'Errachidia', 'Fes', 'Taza', 'Beni Mellal', 'Khouribga', 'Khenifra', 'Fquih Ben Salah']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from unidecode import unidecode\n",
+    "\n",
+    "# List of French words\n",
+    "french_words = french_cit_names\n",
+    "\n",
+    "# Remove accents\n",
+    "plain_words = [unidecode(word) for word in french_words]\n",
+    "\n",
+    "print(plain_words)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
