--- a/data_transfomation.ipynb
+++ b/data_transfomation.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import json\n",
     "import re"
    ]
   },
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,17 +65,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the cities dictionary from the JSON file\n",
+    "with open('cities_mapping.json', 'r', encoding='utf-8') as json_file:\n",
+    "    cities_mapping = json.load(json_file)\n",
+    "# cities_mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_city_name(affiliation_full_name):\n",
+    "    \n",
+    "    # for each key in the dict, if the key exists return the value\n",
+    "    for key, value in cities_mapping.items():\n",
+    "        if key in affiliation_full_name.lower():\n",
+    "            return value\n",
+    "    \n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_country_name(affiliation_full_name):\n",
+    "    try:\n",
+    "        parts = affiliation_full_name.split(',')\n",
+    "        country = parts[-1].strip().lower()\n",
+    "        return country\n",
+    "    except:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
     "def duplicate_rows_by_author(df):\n",
-    "    new_df = pd.DataFrame(columns=[\"author_id\", \"author_name\", \"affiliation_full_name\", \"country\"])\n",
+    "    new_df = pd.DataFrame(columns=[\"author_id\", \"author_name\", \"affiliation_full_name\", \"city\", \"country\"])\n",
     "\n",
     "    for _, row in df.iterrows():\n",
     "        authors_with_ids = row[\"Author full names\"].split(';')\n",
     "        authors_with_affiliations = row[\"Affiliations\"].split(';')\n",
-    "        ids, author_names, affiliations, countries = [], [], [], []\n",
+    "        ids, author_names, affiliations, cities, countries = [], [], [], [], []\n",
     "        \n",
     "        for auth_id_name, aff in zip(authors_with_ids, authors_with_affiliations):\n",
     "            # extract author name\n",
@@ -90,20 +134,24 @@
     "            else:\n",
     "                continue\n",
     "\n",
-    "            # extract country\n",
-    "            country = aff.rsplit(',', 1)[1].strip().lower()\n",
+    "            # extract city and country\n",
+    "            city = extract_city_name(aff)\n",
+    "            country = extract_country_name(aff)\n",
     "            if country not in [\"morocco\", \"maroc\"]:\n",
     "                continue\n",
     "\n",
     "            ids.append(author_id)\n",
     "            author_names.append(author_name)\n",
     "            affiliations.append(aff)\n",
+    "            cities.append(city)\n",
+    "            # cities1.append(city1)\n",
     "            countries.append(country)\n",
     "\n",
     "        data = pd.DataFrame({\n",
     "            \"author_id\": ids,\n",
     "            \"author_name\": author_names,\n",
     "            \"affiliation_full_name\": affiliations,\n",
+    "            \"city\": cities,\n",
     "            \"country\": countries\n",
     "        })\n",
     "\n",
@@ -114,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -141,6 +189,7 @@
        "      <th>author_id</th>\n",
        "      <th>author_name</th>\n",
        "      <th>affiliation_full_name</th>\n",
+       "      <th>city</th>\n",
        "      <th>country</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -150,6 +199,7 @@
        "      <td>23004567900</td>\n",
        "      <td>Khachane, M</td>\n",
        "      <td>Laboratoire de Chimie du Solide Minéral, dépar...</td>\n",
+       "      <td>Marrakech</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -157,6 +207,7 @@
        "      <td>6701835701</td>\n",
        "      <td>Villain, S</td>\n",
        "      <td>Laboratoire de physique du Solide et couches ...</td>\n",
+       "      <td>Marrakech</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -164,6 +215,7 @@
        "      <td>12782205700</td>\n",
        "      <td>Mjahed, Mostafa</td>\n",
        "      <td>Ecole Royale de l'Air, Maths and Systems Dept....</td>\n",
+       "      <td>Marrakech</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -171,6 +223,7 @@
        "      <td>56698346700</td>\n",
        "      <td>Sáenz, L</td>\n",
        "      <td>Departement de Biologie, Université Ibn Tofaï...</td>\n",
+       "      <td>Kénitra</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -178,10 +231,12 @@
        "      <td>56615820600</td>\n",
        "      <td>Bahi, S</td>\n",
        "      <td>Mohammed v University, Faculty of Sciences, Ra...</td>\n",
+       "      <td>Rabat</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -192,6 +247,7 @@
        "      <td>23978044400</td>\n",
        "      <td>Elghazi, Haddou</td>\n",
        "      <td>Solid State Physics Laboratory, Faculty of Sci...</td>\n",
+       "      <td>Fès</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -199,6 +255,7 @@
        "      <td>7006857659</td>\n",
        "      <td>Jorio, Anouar</td>\n",
        "      <td>Regional Center of Interface, Sidi Mohammed B...</td>\n",
+       "      <td>Fès</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -206,6 +263,7 @@
        "      <td>12239828500</td>\n",
        "      <td>Ouarsal, Rachid</td>\n",
        "      <td>Laboratoire DIngénierie des Matériaux Organom...</td>\n",
+       "      <td>None</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -213,6 +271,7 @@
        "      <td>8415913200</td>\n",
        "      <td>Bali, Brahim</td>\n",
        "      <td>Department of Chemistry, Faculty of Sciences,...</td>\n",
+       "      <td>Oujda</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -220,11 +279,12 @@
        "      <td>19638592600</td>\n",
        "      <td>Amrani, Mahacine</td>\n",
        "      <td>Département de Génie Chimique, Faculté des Sci...</td>\n",
+       "      <td>Tanger</td>\n",
        "      <td>morocco</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>155 rows × 4 columns</p>\n",
+       "<p>155 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -241,23 +301,23 @@
        "153   8415913200      Bali, Brahim   \n",
        "154  19638592600  Amrani, Mahacine   \n",
        "\n",
-       "                                 affiliation_full_name  country  \n",
-       "0    Laboratoire de Chimie du Solide Minéral, dépar...  morocco  \n",
-       "1     Laboratoire de physique du Solide et couches ...  morocco  \n",
-       "2    Ecole Royale de l'Air, Maths and Systems Dept....  morocco  \n",
-       "3     Departement de Biologie, Université Ibn Tofaï...  morocco  \n",
-       "4    Mohammed v University, Faculty of Sciences, Ra...  morocco  \n",
-       "..                                                 ...      ...  \n",
-       "150  Solid State Physics Laboratory, Faculty of Sci...  morocco  \n",
-       "151   Regional Center of Interface, Sidi Mohammed B...  morocco  \n",
-       "152   Laboratoire DIngénierie des Matériaux Organom...  morocco  \n",
-       "153   Department of Chemistry, Faculty of Sciences,...  morocco  \n",
-       "154  Département de Génie Chimique, Faculté des Sci...  morocco  \n",
+       "                                 affiliation_full_name       city  country  \n",
+       "0    Laboratoire de Chimie du Solide Minéral, dépar...  Marrakech  morocco  \n",
+       "1     Laboratoire de physique du Solide et couches ...  Marrakech  morocco  \n",
+       "2    Ecole Royale de l'Air, Maths and Systems Dept....  Marrakech  morocco  \n",
+       "3     Departement de Biologie, Université Ibn Tofaï...    Kénitra  morocco  \n",
+       "4    Mohammed v University, Faculty of Sciences, Ra...      Rabat  morocco  \n",
+       "..                                                 ...        ...      ...  \n",
+       "150  Solid State Physics Laboratory, Faculty of Sci...        Fès  morocco  \n",
+       "151   Regional Center of Interface, Sidi Mohammed B...        Fès  morocco  \n",
+       "152   Laboratoire DIngénierie des Matériaux Organom...       None  morocco  \n",
+       "153   Department of Chemistry, Faculty of Sciences,...      Oujda  morocco  \n",
+       "154  Département de Génie Chimique, Faculté des Sci...     Tanger  morocco  \n",
        "\n",
-       "[155 rows x 4 columns]"
+       "[155 rows x 5 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,156 +326,6 @@
     "trans_df = duplicate_rows_by_author(df)\n",
     "trans_df.to_csv(\"metadata.csv\", index=False)\n",
     "trans_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "affiliations_df = pd.read_csv('data/Universities-Affiliations/Moroccan-Affiliations.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "french_cit_names = affiliations_df['City'].apply(lambda x: x.strip()).unique().tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "english_city_names = [\n",
-    "    \"Tetouan\",\n",
-    "    \"Tangier\",\n",
-    "    \"Larache\",\n",
-    "    \"Ksar el-Kebir\",\n",
-    "    \"Al Hoceima\",\n",
-    "    \"Marrakesh\",\n",
-    "    \"El Kelaa of Sraghna\",\n",
-    "    \"Safi\",\n",
-    "    \"Essaouira\",\n",
-    "    \"El Jadida\",\n",
-    "    \"Sidi Bennour\",\n",
-    "    \"Settat\",\n",
-    "    \"Berrechid\",\n",
-    "    \"Casablanca\",\n",
-    "    \"Mohammedia\",\n",
-    "    \"Kenitra\",\n",
-    "    \"Agadir\",\n",
-    "    \"Ait Melloul\",\n",
-    "    \"Guelmim\",\n",
-    "    \"Ouarzazate\",\n",
-    "    \"Taroudant\",\n",
-    "    \"Smara\",\n",
-    "    \"Laayoune\",\n",
-    "    \"Dakhla\",\n",
-    "    \"Oujda\",\n",
-    "    \"Nador\",\n",
-    "    \"Berkane\",\n",
-    "    \"Rabat\",\n",
-    "    \"Sale\",\n",
-    "    \"Meknes\",\n",
-    "    \"Errachidia\",\n",
-    "    \"Fez\",\n",
-    "    \"Taza\",\n",
-    "    \"Beni Mellal\",\n",
-    "    \"Khouribga\",\n",
-    "    \"Khenifra\",\n",
-    "    \"Fquih Ben Salah\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Tétouan': 'Tetouan',\n",
-       " 'Tanger': 'Tangier',\n",
-       " 'Larache': 'Larache',\n",
-       " 'Kssar El Kébir': 'Ksar el-Kebir',\n",
-       " 'Al Hoceima': 'Al Hoceima',\n",
-       " 'Marrakech': 'Marrakesh',\n",
-       " 'EL Kelaâ des Sraghna': 'El Kelaa of Sraghna',\n",
-       " 'Safi': 'Safi',\n",
-       " 'Essaouira': 'Essaouira',\n",
-       " 'El Jadida': 'El Jadida',\n",
-       " 'Sidi Bennour': 'Sidi Bennour',\n",
-       " 'Settat': 'Settat',\n",
-       " 'Berrechid': 'Berrechid',\n",
-       " 'Casablanca': 'Casablanca',\n",
-       " 'Mohammedia': 'Mohammedia',\n",
-       " 'Kénitra': 'Kenitra',\n",
-       " 'Agadir': 'Agadir',\n",
-       " 'Ait Melloul': 'Ait Melloul',\n",
-       " 'Guelmim': 'Guelmim',\n",
-       " 'Ouarzazate': 'Ouarzazate',\n",
-       " 'Taroudant': 'Taroudant',\n",
-       " 'Es-Semara': 'Smara',\n",
-       " 'Laayoune': 'Laayoune',\n",
-       " 'Dakhla': 'Dakhla',\n",
-       " 'Oujda': 'Oujda',\n",
-       " 'Nador': 'Nador',\n",
-       " 'Berkane': 'Berkane',\n",
-       " 'Rabat': 'Rabat',\n",
-       " 'Salé': 'Sale',\n",
-       " 'Meknès': 'Meknes',\n",
-       " 'Errachidia': 'Errachidia',\n",
-       " 'Fès': 'Fez',\n",
-       " 'Taza': 'Taza',\n",
-       " 'Béni Mellal': 'Beni Mellal',\n",
-       " 'Khouribga': 'Khouribga',\n",
-       " 'Khénifra': 'Khenifra',\n",
-       " 'Fquih Ben Salah': 'Fquih Ben Salah'}"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cities = {}\n",
-    "for city_fr, city_en in zip(french_cit_names, english_city_names):\n",
-    "    cities[city_fr] = city_en\n",
-    "cities\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Tetouan', 'Tanger', 'Larache', 'Kssar El Kebir', 'Al Hoceima', 'Marrakech', 'EL Kelaa des Sraghna', 'Safi', 'Essaouira', 'El Jadida', 'Sidi Bennour', 'Settat', 'Berrechid', 'Casablanca', 'Mohammedia', 'Kenitra', 'Agadir', 'Ait Melloul', 'Guelmim', 'Ouarzazate', 'Taroudant', 'Es-Semara', 'Laayoune', 'Dakhla', 'Oujda', 'Nador', 'Berkane', 'Rabat', 'Sale', 'Meknes', 'Errachidia', 'Fes', 'Taza', 'Beni Mellal', 'Khouribga', 'Khenifra', 'Fquih Ben Salah']\n"
-     ]
-    }
-   ],
-   "source": [
-    "from unidecode import unidecode\n",
-    "\n",
-    "# List of French words\n",
-    "french_words = french_cit_names\n",
-    "\n",
-    "# Remove accents\n",
-    "plain_words = [unidecode(word) for word in french_words]\n",
-    "\n",
-    "print(plain_words)"
    ]
   }
  ],
