add more variations to cities mapping

--- a/prepare_city_mapping.ipynb
+++ b/prepare_city_mapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,8 +98,11 @@
     "    'mohammadia': 'Mohammedia',\n",
     "    'tangier': 'Tanger',\n",
     "    'fez': 'Fès',\n",
-    "    'Méknés': 'Meknès',\n",
-    "    'quarzazate': 'Ouarzazate'\n",
+    "    'fés': 'Fès',\n",
+    "    'méknés': 'Meknès',\n",
+    "    'meekness': 'Meknès',\n",
+    "    'quarzazate': 'Ouarzazate',\n",
+    "    'tetuan': 'Tétouan'\n",
     "}\n",
     "\n",
     "cities_mapping.update(other_cities_mapping)\n",
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
