complete the T:transformation logic

--- a/notebooks/translate_affiliations.ipynb
+++ b/notebooks/translate_affiliations.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "affiliations_df = pd.read_csv('../data/Universities-Affiliations/Moroccan-Affiliations.csv')"
+    "affiliations_df = pd.read_csv('../data/raw/Universities-Affiliations/Moroccan-Affiliations.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,15 +44,28 @@
     "    \"Faculté des Sciences Juridiques, Economiques et Sociales\": \"Faculty of Legal, Economic and Social Sciences\",\n",
     "    \"Faculté des Sciences Juridiques et Politiques\": \"Faculty of Juridical and Political Sciences\",\n",
     "    \"Faculté des Lettres et des Sciences Humaines\": \"Faculty of Letters and Humanities\",\n",
-    "    \"Faculté de la Langue Arabe\": \"Faculty of Arabic Language\", \n",
+    "    \"Faculté des Lettres et des Sciences Humaines Aïn Chock\": \"Faculty of Letters and Humanities Aïn Chock\",\n",
+    "    \"Faculté des Lettres et des Sciences Humaines Ben M'Sick\": \"Faculty of Letters and Humanities Ben M'Sick\",\n",
+    "    \"Faculté des Lettres et des Sciences Humaines Dhar El Mahraz\": \"Faculty of Letters and Humanities Dhar El Mahraz\",\n",
+    "    \"Faculté des Lettres et des Sciences Humaines Sais\": \"Faculty of Letters and Humanities Sais\",\n",
+    "    \"Faculté de la Langue Arabe\": \"Faculty of Arabic Language\",\n",
     "    \"Faculté des Sciences\": \"Faculty of Sciences\",\n",
-    "    \"Faculté Polydisciplinaire\": \"Multidisciplinary Faculty\",\n",
+    "    \"Faculté des Sciences Aïn Chock\": \"Faculty of Sciences Aïn Chock\",\n",
+    "    \"Faculté des Sciences Ben M'Sick\": \"Faculty of Sciences Ben M'Sick\",\n",
+    "    \"Faculté des Sciences Semlalia\": \"Faculty of Sciences Semlalia\",\n",
+    "    \"Faculté des Sciences Dhar El Mahraz\": \"Faculty of Sciences Dhar El Mahraz\",\n",
+    "    \"Faculté Polydisciplinaire\": \"Polydisciplinary Faculty\",\n",
     "    \"Faculté des Sciences et Techniques\": \"Faculty of Sciences and Techniques\",\n",
+    "    \"Faculté des Sciences et Techniques Guéliz\": \"Faculty of Sciences and Techniques Guéliz\",\n",
+    "    \"Faculté des Sciences et Techniques Sais\": \"Faculty of Sciences and Techniques Sais\",\n",
+    "    \"Faculté de Médecine et Pharmacie\": \"Faculty of Medicine and Pharmacy\",\n",
     "    \"Faculté de Médecine et de Pharmacie\": \"Faculty of Medicine and Pharmacy\",\n",
     "    \"Faculté de Médecine Dentaire\": \"Faculty of Dental Medicine\",\n",
-    "    \"Faculté d'Economie et de Gestion\": \"Faculty of Economics and Management\", \n",
+    "    \"Faculté de Médecine, de Pharmacie et de Médecine Dentaire\": \"Faculty of Dental Medicine\",\n",
+    "    \"Faculté d'Economie et de Gestion\": \"Faculty of Economics and Management\",\n",
     "    \"Faculté des Langues, Arts et Science humaines\": \"Faculty of Languages, Arts and Human Sciences\",\n",
     "    \"Faculté des Sciences Appliquées\": \"Faculty of Applied Sciences\",\n",
+    "    \"Faculté des Sciences Juridiques, Economiques et Sociales Agdal\": \"Faculty of Legal, Economic and Social Sciences of Agdal\",\n",
     "    \"Faculté des Sciences Juridiques, Economiques et Sociales Aïn Chock\": \"Faculty of Legal, Economic and Social Sciences of Aïn Chock\",\n",
     "    \"Faculté des Sciences Juridiques, Economiques et Sociales Aïn Sebaa\": \"Faculty of Legal, Economic and Social Sciences of Aïn Sebaa\",\n",
     "    \"Faculté des Sciences Juridiques, Economiques et Sociales Souissit\": \"Faculty of Legal, Economic and Social Sciences of Souissit\",\n",
@@ -68,6 +81,7 @@
     "    \"Ecole Nationale de Commerce et de Gestion\": \"National School of Commerce and Management\", \n",
     "    \"Ecole Supérieure de l'Education et de la Formation\": \"Higher School of Education and Training\",\n",
     "    \"Ecole Supérieure de Technologie\": \"Higher School of Technology\", \n",
+    "    \"Ecole Nationale Supérieure de Chimie\": \"Natinal Higher School of Chemistry\", \n",
     "    \"Ecole Nationale Supérieure d'Electricité et de Mécanique\": \"National Higher School of Electricity and Mechanics\", \n",
     "    \"Ecole Nationale Supérieure des Arts et Métiers\": \"National Higher School of Arts and Crafts\", \n",
     "    \"Ecole Nationale Supérieure d'Art et Design\": \"National Higher School of Art and Design\",\n",
@@ -98,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -118,19 +132,21 @@
        "Name: Affiliation, Length: 175, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "affiliations_en = affiliations_df['Affiliation'].apply(lambda aff: translate_affiliation(aff.strip()))\n",
+    "affiliations_df['Affiliation'] = affiliations_df['Affiliation'].apply(lambda aff: aff.strip())\n",
+    "\n",
+    "affiliations_en = affiliations_df['Affiliation'].apply(translate_affiliation)\n",
     "affiliations_en"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,12 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "affiliations_df.to_csv('output/affiliations.csv', index=False)\n"
+    "affiliations_df.to_csv('../data/transformed/affiliations.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
