--- a/notebooks/data_transfomation.ipynb
+++ b/notebooks/data_transfomation.ipynb
@@ -20,16 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/test.csv')"
+    "# df = pd.read_csv('data/test.csv')\n",
+    "df = pd.read_csv('../data/raw/test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +44,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,27 +66,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the cities dictionary from the JSON file\n",
-    "with open('output/cities_mapping.json', 'r', encoding='utf-8') as json_file:\n",
+    "with open('mappers/cities_mapping.json', 'r', encoding='utf-8') as json_file:\n",
     "    cities_mapping = json.load(json_file)\n",
     "# cities_mapping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_city_name(affiliation_full_name):\n",
     "    \n",
     "    # for each key in the dict, if the key exists return the value\n",
+    "    affiliation = affiliation_full_name.lower()\n",
     "    for key, value in cities_mapping.items():\n",
-    "        if key in affiliation_full_name.lower():\n",
+    "        if key in affiliation:\n",
     "            return value\n",
     "    \n",
     "    return None"
@@ -93,13 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_country_name(affiliation_full_name):\n",
     "    try:\n",
-    "        parts = affiliation_full_name.split(',')\n",
+    "        parts = affiliation_full_name.lower().split(',')\n",
     "        country = parts[-1].strip().lower()\n",
     "        return country\n",
     "    except:\n",
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +146,6 @@
     "            author_names.append(author_name)\n",
     "            affiliations.append(aff)\n",
     "            cities.append(city)\n",
-    "            # cities1.append(city1)\n",
     "            countries.append(country)\n",
     "\n",
     "        data = pd.DataFrame({\n",
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -317,16 +318,23 @@
        "[155 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "trans_df = duplicate_rows_by_author(df)\n",
-    "trans_df.to_csv(\"metadata.csv\", index=False)\n",
+    "trans_df.to_csv(\"output/test.csv\", index=False)\n",
     "trans_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
