successfuly implemented the etl script

--- a/notebooks/extract_affiliations.ipynb
+++ b/notebooks/extract_affiliations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Authors', 'Author full names', 'Author(s) ID', 'Title', 'Year',\n",
+       "       'Source title', 'Volume', 'Issue', 'Art. No.', 'Page start', 'Page end',\n",
+       "       'Page count', 'DOI', 'Link', 'Affiliations',\n",
+       "       'Authors with affiliations', 'Author Keywords', 'Index Keywords',\n",
+       "       'Editors', 'Publisher', 'ISSN', 'ISBN', 'CODEN', 'PubMed ID',\n",
+       "       'Language of Original Document', 'Document Type', 'Source', 'EID'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Chater, Oumaima (58033638700); El Ghadraoui, L...\n",
+       "1    Chentouf, Mohamed (57196041934); Nafy, Marieme...\n",
+       "2    Martínez-Freiría, Fernando (14035762500); Boua...\n",
+       "3    Barzani, Saeed Mohammed Qurtas (58858076500); ...\n",
+       "4    Azaid, Ahmed (57224500304); Abram, Tayeb (5620...\n",
+       "Name: Author full names, dtype: object"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Author full names'].head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def normalize_digits(affiliation):\n",
     "    # Patterns for variations\n",
     "    patterns = {\n",
-    "        r'\\b(first|1st|1er|i)\\b': '1',  # Variations of 1\n",
-    "        r'\\b(second|2nd|ii)\\b': '2',    # Variations of 2\n",
-    "        r'\\b(fifth|5th|v)\\b': '5'       # Variations of 5\n",
+    "        r'\\b(first|premier|1st|1er|i)\\b': '1',     # Variations of 1\n",
+    "        r'\\b(second|deuxieme|2nd|2eme|ii)\\b': '2', # Variations of 2\n",
+    "        r'\\b(fifth|cinquieme|5th|5eme|v)\\b': '5',  # Variations of 5\n",
     "    }\n",
     "    \n",
     "    normalized_affiliation = affiliation\n",
@@ -159,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +219,7 @@
     "    affiliation = affiliation.lower()\n",
     "    # remove accents to simply the mapping\n",
     "    affiliation = remove_accents(affiliation)\n",
-    "    # normalize digits\n",
+    "    # normalize digit expressions\n",
     "    affiliation = normalize_digits(affiliation)\n",
     "    \n",
     "    return affiliation"
@@ -176,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,10 +265,10 @@
     "\n",
     "    for _, row in df.iterrows():\n",
     "        authors_with_ids = row[\"Author full names\"].split(';')\n",
-    "        authors_with_affiliations = row[\"Affiliations\"].split(';')\n",
+    "        raw_affiliations = row[\"Affiliations\"].split(';')\n",
     "        ids, author_names, affiliations_full_name, cities, affiliations, affiliation_ids = [], [], [], [], [], []\n",
     "        \n",
-    "        for auth_id_name, aff in zip(authors_with_ids, authors_with_affiliations):\n",
+    "        for auth_id_name, aff in zip(authors_with_ids, raw_affiliations):\n",
     "            \n",
     "            author_id, author_name = extract_author_id_name(auth_id_name)\n",
     "            \n",
@@ -232,7 +283,7 @@
     "            # Extract city\n",
     "            city = extract_city_name(aff)\n",
     "\n",
-    "            # Extract affiliation and aff id\n",
+    "            # Extract affiliation and its id\n",
     "            aff_id, affiliation = extract_affiliation_name(aff, city)\n",
     "\n",
     "            ids.append(author_id)\n",
@@ -258,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,11 +318,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author_id</th>\n",
+       "      <th>author_name</th>\n",
+       "      <th>affiliation_full_name</th>\n",
+       "      <th>city</th>\n",
+       "      <th>affiliation</th>\n",
+       "      <th>affiliation_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>58033638700</td>\n",
+       "      <td>Chater, Oumaima</td>\n",
+       "      <td>University of Sidi Mohamed Ben Abdellah, Facul...</td>\n",
+       "      <td>Fès</td>\n",
+       "      <td>faculty of science</td>\n",
+       "      <td>153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>57222629674</td>\n",
+       "      <td>Ghadraoui, Lahsen</td>\n",
+       "      <td>University of Sidi Mohamed Ben Abdellah, Facu...</td>\n",
+       "      <td>Fès</td>\n",
+       "      <td>faculty of science</td>\n",
+       "      <td>153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6508083389</td>\n",
+       "      <td>Harrach, Ahmed</td>\n",
+       "      <td>Mohammed 1st University, Nador Multidisciplin...</td>\n",
+       "      <td>Nador</td>\n",
+       "      <td>multidisciplinary faculty</td>\n",
+       "      <td>112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57196041934</td>\n",
+       "      <td>Chentouf, Mohamed</td>\n",
+       "      <td>CSD Calypto - Synthesis Solutions, Siemens Dig...</td>\n",
+       "      <td>Rabat</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>58926127900</td>\n",
+       "      <td>Nafy, Marieme</td>\n",
+       "      <td>INPT, Rabat, Morocco</td>\n",
+       "      <td>Rabat</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     author_id        author_name  \\\n",
+       "0  58033638700    Chater, Oumaima   \n",
+       "1  57222629674  Ghadraoui, Lahsen   \n",
+       "2   6508083389     Harrach, Ahmed   \n",
+       "3  57196041934  Chentouf, Mohamed   \n",
+       "4  58926127900      Nafy, Marieme   \n",
+       "\n",
+       "                               affiliation_full_name   city  \\\n",
+       "0  University of Sidi Mohamed Ben Abdellah, Facul...    Fès   \n",
+       "1   University of Sidi Mohamed Ben Abdellah, Facu...    Fès   \n",
+       "2   Mohammed 1st University, Nador Multidisciplin...  Nador   \n",
+       "3  CSD Calypto - Synthesis Solutions, Siemens Dig...  Rabat   \n",
+       "4                               INPT, Rabat, Morocco  Rabat   \n",
+       "\n",
+       "                 affiliation affiliation_id  \n",
+       "0         faculty of science            153  \n",
+       "1         faculty of science            153  \n",
+       "2  multidisciplinary faculty            112  \n",
+       "3                       None           None  \n",
+       "4                       None           None  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trans_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trans_df.to_csv(\"../data/transformed/2023.csv\", index=False)"
+    "trans_df.to_csv(\"../data/transformed/transformed_2023.csv\", index=False)"
    ]
   },
   {
@@ -300,16 +467,6 @@
     "# trans_df['affiliation']\n",
     "# trans_df.columns\n",
     "trans_df.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transformed = trans_df[['affiliation_full_name', 'affiliation']]\n",
-    "transformed.to_csv(\"../data/transformed/result.csv\", index=False)"
    ]
   }
  ],
