--- a/notebooks/prepare_affiliation_mappers.ipynb
+++ b/notebooks/prepare_affiliation_mappers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,6 +126,13 @@
     "    fst_fes.loc[:, 'Affiliation En Name'] = 'Faculty of Sciences and Techniques'\n",
     "    updated_rows.append(fst_fes)\n",
     "\n",
+    "    # FST Guéliz -> FST\n",
+    "    fst_guez = df.loc[df['id'] == 25].copy()\n",
+    "    fst_guez.loc[:, 'Abbreviation'] = 'FST'\n",
+    "    fst_guez.loc[:, 'Affiliation'] = 'Faculté des Sciences et Techniques'\n",
+    "    fst_guez.loc[:, 'Affiliation En Name'] = 'Faculty of Sciences and Techniques'\n",
+    "    updated_rows.append(fst_guez)\n",
+    "\n",
     "    # Combine original DataFrame with the new rows\n",
     "    updated_df = pd.concat([df] + updated_rows, ignore_index=True)\n",
     "\n",
@@ -134,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
