added etl dag and organized the project

--- a/notebooks/combine_moroccan_affiliations.ipynb
+++ b/notebooks/combine_moroccan_affiliations.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = 'data/Universities-Affiliations'"
+    "folder_path = '../data/Universities-Affiliations'"
    ]
   },
   {
@@ -142,6 +142,13 @@
    "source": [
     "combined_df.to_csv('data/Universities-Affiliations/Moroccan-Affiliations.csv', index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
