--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/transformed/2023.csv')"
+    "df = pd.read_csv('../data/transformed/transformed_2023.csv')"
    ]
   },
   {
@@ -57,10 +57,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "raw_df = pd.read_csv('../data/raw/scopus/2023.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Authors', 'Author full names', 'Author(s) ID', 'Title', 'Year',\n",
+       "       'Source title', 'Volume', 'Issue', 'Art. No.', 'Page start', 'Page end',\n",
+       "       'Page count', 'DOI', 'Link', 'Affiliations',\n",
+       "       'Authors with affiliations', 'Author Keywords', 'Index Keywords',\n",
+       "       'Editors', 'Publisher', 'ISSN', 'ISBN', 'CODEN', 'PubMed ID',\n",
+       "       'Language of Original Document', 'Document Type', 'Source', 'EID'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "title, year, source_title, volume, issue, publisher, issn, language of original document, document_type, cited_by"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       NaN\n",
+       "1       NaN\n",
+       "2       NaN\n",
+       "3       NaN\n",
+       "4       NaN\n",
+       "         ..\n",
+       "14953   NaN\n",
+       "14954   NaN\n",
+       "14955   NaN\n",
+       "14956   NaN\n",
+       "14957   NaN\n",
+       "Name: PubMed ID, Length: 14958, dtype: float64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_df['PubMed ID']"
+   ]
   }
  ],
  "metadata": {
