transfrom journal-23.csv to clean stat, easyli readable by pandas

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,6 +126,29 @@
    ],
    "source": [
     "raw_df['PubMed ID']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# jr = pd.read_csv('../data/raw/sjr/journal-23.csv')\n",
+    "jr = pd.read_csv('../data/raw/sjr/journal-23.csv', \n",
+    "                 on_bad_lines='warn',  # This will warn about problematic lines instead of failing\n",
+    "                 sep=',',              # Explicitly specify the delimiter\n",
+    "                 quoting=1)            # QUOTE_ALL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "jr = pd.read_csv('../data/transformed/clean_journal_23.csv')"
    ]
   }
  ],
