build the data model and integrate more data columns

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,44 +57,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_df = pd.read_csv('../data/raw/scopus/2023.csv')"
+    "raw_df = pd.read_csv('../data/transformed/affiliations.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Authors', 'Author full names', 'Author(s) ID', 'Title', 'Year',\n",
-       "       'Source title', 'Volume', 'Issue', 'Art. No.', 'Page start', 'Page end',\n",
-       "       'Page count', 'DOI', 'Link', 'Affiliations',\n",
-       "       'Authors with affiliations', 'Author Keywords', 'Index Keywords',\n",
-       "       'Editors', 'Publisher', 'ISSN', 'ISBN', 'CODEN', 'PubMed ID',\n",
-       "       'Language of Original Document', 'Document Type', 'Source', 'EID'],\n",
+       "Index(['id', 'Affiliation', 'Abbreviation', 'University', 'City',\n",
+       "       'Affiliation En Name'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "raw_df.columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "title, year, source_title, volume, issue, publisher, issn, language of original document, document_type, cited_by"
    ]
   },
   {
@@ -130,25 +119,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Rank', 'Sourceid', 'Title', 'Type', 'Issn', 'SJR', 'SJR Best Quartile',\n",
+       "       'H index', 'Total Docs. (2023)', 'Total Docs. (3years)', 'Total Refs.',\n",
+       "       'Total Cites (3years)', 'Citable Docs. (3years)',\n",
+       "       'Cites / Doc. (2years)', 'Ref. / Doc.', '%Female', 'Overton', 'SDG',\n",
+       "       'Country', 'Region', 'Publisher', 'Coverage', 'Categories', 'Areas'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# jr = pd.read_csv('../data/raw/sjr/journal-23.csv')\n",
     "jr = pd.read_csv('../data/raw/sjr/journal-23.csv', \n",
     "                 on_bad_lines='warn',  # This will warn about problematic lines instead of failing\n",
-    "                 sep=',',              # Explicitly specify the delimiter\n",
-    "                 quoting=1)            # QUOTE_ALL"
+    "                 sep=';',              # Explicitly specify the delimiter\n",
+    "                 quoting=1)            # QUOTE_ALL\n",
+    "\n",
+    "jr.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Rank', 'Sourceid', 'Title', 'Type', 'Issn', 'SJR', 'SJR_Best_Quartile',\n",
+       "       'H_index', 'Total_Docs_(2023)', 'Total_Docs_(3years)', 'Total_Refs',\n",
+       "       'Total_Cites_(3years)', 'Citable_Docs_(3years)', 'Cites_/_Doc_(2years)',\n",
+       "       'Ref_/_Doc', '%Female', 'Overton', 'SDG', 'Country', 'Region',\n",
+       "       'Publisher', 'Coverage', 'Categories', 'Areas'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "jr = pd.read_csv('../data/transformed/clean_journal_23.csv')"
+    "jr = pd.read_csv('../data/transformed/clean_journal_23.csv')\n",
+    "jr.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'name'], dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "authors = pd.read_csv('../data/dimensions/authors.csv')\n",
+    "authors.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id      24658\n",
+       "name    24658\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "authors.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('O')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "authors['name'].dtype"
    ]
   }
  ],
