loading to postgres successfully

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,6 +173,123 @@
     "import pandas as pd\n",
     "jr = pd.read_csv('../data/transformed/clean_journal_23.csv')\n",
     "jr.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "empty_issn_journals = jr[jr['Issn'].isnull()]\n",
+    "# empty_issn_journals.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Sourceid</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Issn</th>\n",
+       "      <th>SJR</th>\n",
+       "      <th>SJR_Best_Quartile</th>\n",
+       "      <th>H_index</th>\n",
+       "      <th>Total_Docs_(2023)</th>\n",
+       "      <th>Total_Docs_(3years)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Ref_/_Doc</th>\n",
+       "      <th>%Female</th>\n",
+       "      <th>Overton</th>\n",
+       "      <th>SDG</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>Coverage</th>\n",
+       "      <th>Categories</th>\n",
+       "      <th>Areas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>21100400826</td>\n",
+       "      <td>Journal of Energy Storage</td>\n",
+       "      <td>journal</td>\n",
+       "      <td>2352152X</td>\n",
+       "      <td>1.595</td>\n",
+       "      <td>Q1</td>\n",
+       "      <td>105</td>\n",
+       "      <td>3161</td>\n",
+       "      <td>4523</td>\n",
+       "      <td>...</td>\n",
+       "      <td>61,39</td>\n",
+       "      <td>28,12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1889</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>Western Europe</td>\n",
+       "      <td>Elsevier B.V.</td>\n",
+       "      <td>2015-2023</td>\n",
+       "      <td>Electrical and Electronic Engineering (Q1); En...</td>\n",
+       "      <td>Energy; Engineering</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Rank     Sourceid                      Title     Type      Issn    SJR  \\\n",
+       "2023  2024  21100400826  Journal of Energy Storage  journal  2352152X  1.595   \n",
+       "\n",
+       "     SJR_Best_Quartile  H_index  Total_Docs_(2023)  Total_Docs_(3years)  ...  \\\n",
+       "2023                Q1      105               3161                 4523  ...   \n",
+       "\n",
+       "      Ref_/_Doc  %Female  Overton   SDG      Country          Region  \\\n",
+       "2023      61,39    28,12        6  1889  Netherlands  Western Europe   \n",
+       "\n",
+       "          Publisher   Coverage  \\\n",
+       "2023  Elsevier B.V.  2015-2023   \n",
+       "\n",
+       "                                             Categories                Areas  \n",
+       "2023  Electrical and Electronic Engineering (Q1); En...  Energy; Engineering  \n",
+       "\n",
+       "[1 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jr[jr['Title'] == 'Journal of Energy Storage']"
    ]
   },
   {
@@ -236,6 +353,64 @@
    ],
    "source": [
     "authors['name'].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50400\n"
+     ]
+    }
+   ],
+   "source": [
+    "publications = pd.read_csv('../data/fact/publications_fact.csv')\n",
+    "issns = publications['ISSN'].astype(str)\n",
+    "ans = []\n",
+    "for issn in issns:\n",
+    "    b =  ',' in issn\n",
+    "    ans.append(b)\n",
+    "\n",
+    "print(ans.count(True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Author ID                        3458\n",
+       "Affiliation ID                   3458\n",
+       "Title                            3458\n",
+       "Year                             3458\n",
+       "Document Type                    3458\n",
+       "Source title                     3458\n",
+       "DOI                              3319\n",
+       "Link                             3458\n",
+       "Language of Original Document    3458\n",
+       "ISSN                                0\n",
+       "PubMed ID                           0\n",
+       "Volume                             72\n",
+       "Issue                               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "empty_issn_publications = publications[publications['ISSN'].isna()]\n",
+    "empty_issn_publications.count()"
    ]
   }
  ],
