add project documentaion

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -11,11 +11,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Authors', 'Author full names', 'Author(s) ID', 'Title', 'Year',\n",
+       "       'Source title', 'Volume', 'Issue', 'Art. No.', 'Page start', 'Page end',\n",
+       "       'Page count', 'DOI', 'Link', 'Affiliations',\n",
+       "       'Authors with affiliations', 'Author Keywords', 'Index Keywords',\n",
+       "       'Editors', 'Publisher', 'ISSN', 'ISBN', 'CODEN', 'PubMed ID',\n",
+       "       'Language of Original Document', 'Document Type', 'Source', 'EID'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv('../data/transformed/transformed_2023.csv')"
+    "df = pd.read_csv('../data/raw/scopus/2023.csv')\n",
+    "df.columns"
    ]
   },
   {
